tests/NormalTests/paczka2/big_fuzzy/21910378.err
Error in line 3: DmrS7 S787 96,5
Error in line 6: lC1zhE9LwE S969 26,4
Error in line 4: DmrS7 S969 2,8
Error in line 19: S969 S969 49,7
Error in line 24: S969 A991 15,9
Error in line 20: DmrS7 A991 11,6
Error in line 25: S969 S969 92,4
Error in line 28: 9MnT0dzT A991 36,1
Error in line 12: eaPlntw3m A991 58,0
Error in line 34: Ct8E9qDU1S S787 16,3
Error in line 29: S969 A991 7,0
Error in line 37: Ct8E9qDU1S A991 93,2
Error in line 46: lC1zhE9LwE S493 6,9
Error in line 59: lC1zhE9LwE S493 8,4
Error in line 40: S969 S969 44,0
Error in line 78: Ct8E9qDU1S S969 78,6
Error in line 95: 9MnT0dzT S787 3,23
Error in line 92: 9MnT0dzT A991 38,8
Error in line 99: 9MnT0dzT S787 16,2
Error in line 111: DmrS7 A991 97,2
Error in line 127: 9MnT0dzT S493 89,3
Error in line 130: lC1zhE9LwE S787 94,6
Error in line 129: 9MnT0dzT S969 77,0
Error in line 139: lC1zhE9LwE S787 4,2
Error in line 123: DmrS7 S787 176,8
Error in line 143: S969 S493 4,0
Error in line 144: eaPlntw3m S969 12,4
Error in line 160: 9MnT0dzT A991 76,2
Error in line 163: eaPlntw3m S493 24,6
Error in line 165: 9MnT0dzT S787 34,8
Error in line 172: Ct8E9qDU1S A991 0,94
Error in line 166: eaPlntw3m S787 45,3
Error in line 177: eaPlntw3m S969 -1,8
Error in line 181: Ct8E9qDU1S S787 193,3
Error in line 175: eaPlntw3m S969 11,1
Error in line 190: eaPlntw3m A991 54,9
Error in line 193: eaPlntw3m S787 84,2
Error in line 209: DmrS7 S969 8,5
Error in line 214: S969 S787 83,1
Error in line 204: Ct8E9qDU1S S969 37,9
Error in line 231: Ct8E9qDU1S S493 83,3
Error in line 234: Ct8E9qDU1S S787 88,4
Error in line 235: Ct8E9qDU1S S493 45,7
Error in line 246: eaPlntw3m S493 58,9
Error in line 248: eaPlntw3m S787 15,0
Error in line 249: eaPlntw3m S493 17,9
